python courses and js starter codes

--- a/src/app/app.html
+++ b/src/app/app.html
@@ -23,8 +23,14 @@
         <a class="nav-link" routerLink="/js-7-days" routerLinkActive="active">
           7 Days JS
         </a>
+        <a class="nav-link" routerLink="/python-7-days" routerLinkActive="active">
+          7 Days Python
+        </a>
         <a class="nav-link" routerLink="/js-28-days" routerLinkActive="active">
           28 Days JS
+        </a>
+        <a class="nav-link" routerLink="/python-28-days" routerLinkActive="active">
+          28 Days Python
         </a>
       </nav>
     </div>
